<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <Button
        android:id="@+id/btbComenzar"
        style="@style/Buttonmystyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtComandar"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="37dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/action_comenzar"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/txtComandar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ask_comandar"
        android:textColor="@android:color/black"
        android:textSize="@dimen/small" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtComandar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/pressed_mewaiter"
        android:textSize="@dimen/big"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtAviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btbComenzar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/aviso"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txtSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtComandar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/action_saludo"
        android:textColor="@android:color/black"
        android:textSize="@dimen/small"
        android:textStyle="normal" />

</RelativeLayout>